fix: image overflow

--- a/movie-search/src/style/main.scss
+++ b/movie-search/src/style/main.scss
@@ -279,7 +279,7 @@ button:focus {
 .swiper-slide__poster {
   position: relative;
   height: 230px;
-  max-width: 170px;
+  max-width: 155px;
   overflow: hidden;
   display: flex;
   justify-content: center;
